--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "ejs": "^3.1.10",
+    "express": "^4.19.2",
     "mongoose": "^8.4.3"
   }
 }
